# firefox-session-ui

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  Trunk.toml  Trunk.yaml  build.rs  trunk.html
.github/workflows/: deploy-pages.yml  publish.yml
public/: style.css
src/: file_picker.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/host_commands/: Cargo.toml
src-tauri/host_commands/src/: host.rs  lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
