[package]
name = "firefox-session-ui"
version = "0.1.0"
authors = ["Lej77 <31554212+Lej77@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0" # Some optional features of the firefox-session-data library might have more restrictive licenses

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Easy access to cli tools required when developing:
# https://github.com/dustinblackman/cargo-run-bin
[package.metadata.bin]
# cargo-binstall = { version = "1.10.17" }
tauri-cli = { version = "2.0.4" }
dioxus-cli = { version = "0.6.0" }
trunk = { version = "0.21.5" }


[features]
default = ["dioxus-desktop", "wasm-standalone"]

# Tauri support:
tauri = ["host_commands/tauri-import"]

# Wasm should work without Tauri:
wasm-standalone  = ["host_commands/wasm-standalone"]

# Built by trunk:
trunk = []

# Native dioxus build:
dioxus-desktop = ["host_commands/dioxus-export"]

# Use https://github.com/DioxusLabs/blitz
blitz = ["dep:dioxus-native"]

# Support more PDF formats (large binary size increase):
html_to_pdf_all = ["host_commands/html_to_pdf_all"]


[dependencies]
dioxus = "0.7.0"
log = "0.4.6"
tokio = "1.27.0"
host_commands = { path = "src-tauri/host_commands" }

# Dioxus Desktop App:
[target.'cfg(not(target_family = "wasm"))'.dependencies]
dioxus-desktop = "0.7.0"
arboard = "3.4.0" # Clipboard access
resource = "0.5.0" # Fast reload of style in debug mode
dioxus-native = {version = "0.7.0", optional = true, features = ["net"] } # The native Blitz HTML renderer

# Tauri frontend OR WebAssembly website:
[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = "0.7.0"
# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["HtmlCollection", "HtmlSelectElement", "HtmlOptionElement", "Url", "Blob", "HtmlAnchorElement"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[build-dependencies]
winresource = "0.1.19" # Windows icon for Dioxus Desktop App


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
