[package]
name = "firefox-session-ui-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["Lej77 <31554212+Lej77@users.noreply.github.com>"]
license = "MIT OR Apache-2.0" # Some optional features of the firefox-session-data library might have more restrictive licenses
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "config-json5",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
host_commands = { path = "./host_commands", features = ["tauri-export"] }
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Support more PDF formats (large binary size increase):
html_to_pdf_all = ["host_commands/html_to_pdf_all"]
