[package]
name = "host_commands"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0" # Some optional features of the firefox-session-data library might have more restrictive licenses

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Tauri Wasm frontend
tauri-import = [
    "tauri_commands/tauri-import",
    "dep:wasm-bindgen-futures", # Owned<T>
    "dep:serde", # Owned<T>:
]
# Tauri native backend
tauri-export = [
    "tauri_commands/tauri-export",
    "dep:tauri-plugin-dialog",
    "dep:tauri",
    "dep:serde", # Owned<T>
    "dep:firefox_session_data",
    "dep:either",
    "dep:serde_json",
    "dep:tokio",
]
# Native dioxus target:
dioxus-export = [
    "tauri_commands/tauri-import",
    "dep:dioxus-desktop",
    "dep:rfd",
    "dep:firefox_session_data",
    "dep:either",
    "dep:serde_json",
    "dep:tokio",
]
# Host implementation for Wasm frontend:
wasm-standalone = [
    "dep:firefox_session_data",
    "dep:either",
    "dep:serde_json",
    "dep:tokio",
]
# Support more PDF formats (large binary size increase):
html_to_pdf_all = ["firefox_session_data?/html_to_pdf_all"]

[dependencies]
tauri_commands = { git = "http://github.com/Lej77/tauri_commands.git", tag ="v0.2.3" }
serde = { version = "1", optional = true }
async-trait = "0.1.75"

# For host implementation:
firefox_session_data = { git = "http://github.com/Lej77/firefox_session_data.git", tag = "v0.1.0", optional = true, features = ["windows-gui"] }
either = { version = "1.6.0", optional = true }
serde_json = { version = "1.0.95", optional = true }
tokio = { version = "1.27.0", optional = true, features = ["rt"] }


[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = { version = "0.4", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Tauri:
futures-channel = "0.3.28"
tauri = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
# Dioxus Native:
dioxus-desktop = { version = "0.6.0", optional = true }
rfd = { version = "0.15.0", optional = true }
